fix title spacings and tags styling

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -49,6 +49,11 @@
     justify-content: center;
 }
 
+.flex-left {
+    display: flex;
+    justify-content: start;
+}
+
 .font-mono {
     font-family: "Jetbrains Mono", monospace;
 }
